[tool.poetry]
name = "url-shortener-api"
version = "0.1.0"
description = "A simple FastAPI-based URL shortener"
authors = ["Kerem Semiz <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
pydantic = "^1.10.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
